# mcparr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  babel.cfg  config.yaml.example  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
docker/: Dockerfile
docs/: threat-model.md
mcparr/: __init__.py  config.py  errors.py  health.py  logging.py  main.py  mcp_server.py  service_manager.py
mcparr/services/: __init__.py  _arr.py  base.py  radarr.py  sonarr.py
mcparr/ui/: __init__.py  app.py  i18n.py  security.py
mcparr/ui/locales/es/LC_MESSAGES/: messages.po
mcparr/ui/static/: style.css
mcparr/ui/templates/: base.html  connect.html  dashboard.html  login.html  password.html  service_form.html  setup.html
scripts/: next_version.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_next_version.py  test_services.py
