[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcparr"
description = "An MCP gateway for the *arr ecosystem and Plex media server."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "PhillyUrbs" }]
keywords = ["mcp", "radarr", "sonarr", "plex", "homelab", "media"]
dynamic = ["version"]

dependencies = [
    "anyio>=4.4",
    "fastapi>=0.115",
    "fastmcp>=2.9",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "cryptography>=43",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "babel>=2.15",
    "argon2-cffi>=23",
    "itsdangerous>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[project.scripts]
mcparr = "mcparr.main:run"

[project.urls]
Homepage = "https://github.com/PhillyUrbs/mcparr"
Repository = "https://github.com/PhillyUrbs/mcparr"

[tool.hatch.version]
path = "mcparr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mcparr"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["B008"]  # FastAPI/Depends use function calls in defaults

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
